Fix mobile screen spacing and font sizes

--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -27,8 +27,9 @@ button:disabled {
 .main {
 	left: 0;
 	// margin-top: 10rem;
+	padding-bottom: 15rem;
 	position: relative;
-	top: 20rem;
+	top: 8rem;
 	transition: 0.3s;
 	width: 100%;
 
