--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -1,6 +1,6 @@
 .header {
 	background: $dark-grey;
-	height: 20rem;
+	height: 8rem;
 	position: fixed;
 	top: 0;
 	width: 100%;
@@ -26,7 +26,7 @@
 .header__title {
 	color: white;
 	font-family: $font-display;
-	font-size: 4rem;
+	font-size: 3.2rem;
 	font-style: normal;
 	font-weight: 400;
 	margin: 0 $m-size;
@@ -34,6 +34,10 @@
 	text-shadow: 0 0 3px black;
 	h1 {
 		margin: 0;
+	}
+
+	@media (min-width: $desktop-breakpoint) {
+		font-size: 4rem;
 	}
 }
 
